# amux

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/amux/: Cargo.toml
crates/amux/src/: cli.rs  main.rs  model.rs  session_view.rs  tmux.rs  tui.rs
crates/amux/tests/: cli.rs
docs/: architecture.md  roadmap.md  tui-debugging.md
