[package]
name = "amux"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Friendly client for persistent local and remote terminal sessions"
readme = "../../README.md"
keywords = ["tmux", "terminal", "sessions", "tui", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
